# tagger

./: Cargo.toml  README.md  generate_assets.sh  html.html
assets/: html_example.html
examples/: demo.rs  demo2.rs  html.rs  json.rs  move.rs  new.rs  raw.rs  simple.rs  simple_render.rs  stack.rs  svg.rs  svg_arc.rs  svg_polygon.rs  swap_writer.rs  xml2.rs
src/: elem.rs  element_borrow.rs  element_move.rs  json.rs  lib.rs  lib_old.rs  raw.rs  render.rs  svg.rs  xml.rs  xml2.rs
src/xml/: mod.rs  svg.rs
