[package]
name = "tagger"
version = "0.3.2"
authors = ["Ken <kenakioreed@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/tiby312/tagger"
description = "Write SVG / HTML / XML programmatically"
keywords = ["svg", "html","xml","tag","markup"]
readme = "README.md"
include = ["src/**/*", "LICENSE-MIT", "README.md"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
